--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -1,8 +1,3 @@
-#Version(1.0):
-#    version: 1.0
-#    isDefault: true
-#    matches: 1.1
-
 Version(head):
     version: head
     isDefault: true
@@ -16,6 +11,7 @@ Version(1.1RC3):
 Module(maven):
     name: maven
     fullname: Play Maven
+    description : This module lets you manage your dependencies with apache maven.
     versions:
         - 1.1RC3
         - head
