--- a/conf/application.conf
+++ b/conf/application.conf
@@ -66,7 +66,7 @@ date.format=yyyy-MM-dd
 # ~~~~~
 # Specify log level for your application.
 # If you want a very customized log, create a log4j.properties file in the conf directory
-# application.log=INFO
+application.log=TRACE
 #
 # More logging configuration
 # application.log.path=/log4j.properties
@@ -147,8 +147,8 @@ attachments.path=data/attachments
 # WS configuration
 # ~~~~~
 # If you need to set proxy params for WS requests
-# http.proxyHost = 
-# http.proxyPort = 
+http.proxyHost = webcache.groupe.generali.fr 
+http.proxyPort = 3128
 # http.proxyUser = jojo
 # http.proxyPassword = jojo
 
@@ -190,3 +190,4 @@ mail.smtp=mock
 %test.jpa.ddl=create-drop
 %test.mail.smtp=mock
 
+playrepo.data.path=data/play-repo
