Bug : correction of artefact upload. Enhancement : remove spaces from textarea for Module description. Add Intellij config files to .gitignore

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -147,8 +147,8 @@ attachments.path=data/attachments
 # WS configuration
 # ~~~~~
 # If you need to set proxy params for WS requests
-http.proxyHost=webcache.groupe.generali.fr
-http.proxyPort=3128
+# http.proxyHost=webcache.groupe.generali.fr
+# http.proxyPort=3128
 # http.proxyUser = jojo
 # http.proxyPassword = jojo
 
